test/tests/stages/11_long_integers/invalid_types/conflicting_variable_types.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[17]:
  long
  identifier(a)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  extern
  int
  identifier(a)
  ;
  return
  const int(0)
  ;
  }
